--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@
 
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
+apply plugin: "java"
+sourceCompatibility = 1.8
 
 // In this section you declare where to find the dependencies of your project
 repositories {
